src/objects/Partner_Task__c.object
<CustomObject>
    <description>The Partner Task object is used to highlight exactly what it is the partner has to do next in order to correctly process a customer. They are used specifically in the partner portal, but also internally in the Salesforce UI.</description>
    <fields>
        <fullName>Action_Label__c</fullName>
        <formula>CASE(Name,
    &quot;Run Credit Check&quot;, &quot;&quot;,
    &quot;Provide All Customer Information&quot;, &quot;&quot;,
    &quot;Provide Income Documentation&quot;, &quot;&quot;,
    &quot;Provide PayStub Documentation&quot;, &quot;Upload&quot;,
    &quot;Provide SSN/Pension Award Letter or Bank Statement&quot;, &quot;Upload&quot;,
    &quot;Provide Tax Return (Previous Year)&quot;, &quot;Upload&quot;,
    &quot;Provide Tax Return (Two Years Previous)&quot;, &quot;Upload&quot;,
    &quot;Provide Technical Confirmation Documentation&quot;, &quot;Upload&quot;,
    &quot;Provide all System Information&quot;, &quot;Input&quot;,
    &quot;Under BlueWave Review&quot;, &quot;&quot;, 
    &quot;Obtain Contract Signature&quot;, &quot;Upload&quot;,
    &quot;Provide Sales Agreement&quot;, IF(ISBLANK(Loan__r.Opportunity__c),&quot;ERROR, call BW&quot;, &quot;Upload&quot;),
    &quot;BlueWave Counter Signature&quot;, &quot;&quot;,
    &quot;Building Permit&quot;, &quot;Submit&quot;,
    &quot;Material Invoice&quot;, &quot;Upload&quot;, 
    &quot;Mechanical Installation&quot;, &quot;Upload&quot;,
    &quot;Interconnection&quot;, IF( Loan__r.State__c = &quot;MA&quot;, &quot;Input&quot;, &quot;Upload&quot;),
    &quot;Report Interconnection to MCEC&quot;, IF( Loan__r.State__c = &quot;MA&quot;, &quot;Input&quot;, &quot;Upload&quot;),
    &quot;Complete&quot;, &quot;&quot;,
    &quot;&quot;)</formula>
        <inlineHelpText>Maps Task Names to an action button label (Upload, Submit, or something else). If there is no label, the portal will hide the action button</inlineHelpText>
        <label>Action Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_MSLP_Identifier__c</fullName>
        <description>This field is used on line 125 of the LoanHandlerTestClass to differentiate MSLP Parent Tasks from Standard Parent Tasks. Since the task isn&apos;t related to the loan or the lead, it needs this to identify.</description>
        <formula>Parent_Task__r.Parent_Task__r.Loan__r.DOER_Solar_Loann__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child MSLP Identifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Status__c</fullName>
        <formula>IF(ISBLANK(Parent_Task__c),
   TEXT(Status__c),
   IF(!ISBLANK(Parent_Task__r.Parent_Task__c),
      CASE(TEXT(Parent_Task__r.Parent_Task__r.Status__c),
           &quot;Complete&quot;, &quot;Complete&quot;,
           &quot;Pending&quot;, CASE(TEXT(Parent_Task__r.Status__c),
                           &quot;Complete&quot;, &quot;Complete&quot;,
                           &quot;Incomplete&quot;, CASE(BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;),
                                              &quot;Incomplete&quot;, &quot;Pending&quot;,
                                              BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;)),
                           &quot;Pending&quot;, CASE(BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;),
                                           &quot;Incomplete&quot;, &quot;Pending&quot;,
                                           BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;)),
                           TEXT(Status__c)),
           &quot;Incomplete&quot;, CASE(TEXT(Parent_Task__r.Status__c),
                              &quot;Complete&quot;, &quot;Complete&quot;,
                              &quot;Incomplete&quot;, BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;),
                              &quot;Pending&quot;, CASE(BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;),
                                              &quot;Incomplete&quot;, &quot;Pending&quot;,
                                              BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;)),
                              BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;)),
           BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;)),
      CASE(TEXT(Parent_Task__r.Status__c),
           &quot;Complete&quot;, &quot;Complete&quot;,
           &quot;Pending&quot;, CASE(BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;),
                           &quot;Incomplete&quot;, &quot;Pending&quot;,
                           BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;)),
           BLANKVALUE(TEXT(Status__c),&quot;Pending&quot;))))</formula>
        <inlineHelpText>Allows the Parent or Grandparent Task to override current Task Status since task statuses can be set manually. Complete overrides Pending, and Grandparents override Parents.
May 2018: default blank statuses to &quot;Pending&quot;</inlineHelpText>
        <label>Effective Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Tree_Sequence__c</fullName>
        <formula>IF(NOT(ISBLANK( Task_Sequence__c )),
   TEXT(Task_Sequence__c),
   IF(NOT(ISBLANK(  Parent_Task__r.Task_Sequence__c )),
      TEXT(Parent_Task__r.Task_Sequence__c) &amp; &quot; &quot; &amp; Id,
      TEXT(Parent_Task__r.Parent_Task__r.Task_Sequence__c) &amp; &quot; &quot; &amp; Parent_Task__r.Id &amp; &quot; &quot; &amp; Id))</formula>
        <inlineHelpText>Used to order all partner tasks (not just those that have a Task Sequence) in the Customer lightning component.</inlineHelpText>
        <label>Full Tree Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <formula>CASE(Name, 
&quot;Mechanical Installation&quot;, &quot;Examples: Passed Electrical Inspection Report, Permit Card, Email from AHJ, or similar backup. This can be a PDF, PNG, JPG&quot;, 
&quot;Interconnection&quot;, &quot;Examples: PTO Letter/Email from Utility, Signed Interconnection Agreement, or similar backup. This can be a PDF, PNG, JPG.&quot;, 
&quot;Provide Sales Agreement&quot;,&quot;Please ensure the sales agreement shows: 1) System cost/requested loan amount 2) System information 3) Address 4) Customer Signature&quot;, 
&quot;Material Invoice&quot;,&quot;Please upload the invoice with CED&quot;, 
&quot;&quot;)</formula>
        <inlineHelpText>Used to display help text in the partner portal</inlineHelpText>
        <label>Help Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Partner Tasks</relationshipLabel>
        <relationshipName>Partner_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Creation_Date__c</fullName>
        <formula>Loan__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Partner Tasks</relationshipLabel>
        <relationshipName>Partner_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Tasks</relationshipLabel>
        <relationshipName>Partner_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>CASE(Name,
    &quot;Run Credit Check&quot;, &quot;Installer&quot;,
    &quot;Provide All Customer Information&quot;, &quot;Installer&quot;,
    &quot;Provide Income Documentation&quot;, &quot;Applicant&quot;,
    &quot;Provide All Income Documentation&quot;, &quot;Applicant&quot;,
    &quot;Provide PayStub Documentation&quot;, &quot;Applicant&quot;,
    &quot;Provide SSN/Pension Award Letter or Bank Statement&quot;, &quot;Applicant&quot;,
    &quot;Provide Tax Return (Previous Year)&quot;, &quot;Applicant&quot;,
    &quot;Provide Tax Return (Two Years Previous)&quot;, &quot;Applicant&quot;,
    &quot;Provide Technical Confirmation Documentation&quot;, &quot;Applicant&quot;,
    &quot;Provide all System Information&quot;, &quot;Installer&quot;,
    &quot;Provide Additional Income Documentation&quot;, &quot;Applicant&quot;,
    &quot;Under BlueWave Review&quot;, &quot;BlueWave&quot;, 
    &quot;Obtain Contract Signature&quot;, &quot;Applicant&quot;,
    &quot;Provide Sales Agreement&quot;, &quot;Installer&quot;,
    &quot;BlueWave Counter Signature&quot;, &quot;BlueWave&quot;,
    &quot;Building Permit&quot;, &quot;Installer&quot;,
    &quot;Mechanical Installation&quot;, &quot;Installer&quot;,
    &quot;Interconnection&quot;, &quot;Installer&quot;,
    &quot;Material Invoice&quot;, &quot;Installer&quot;,
    &quot;Report Interconnection to MCEC&quot;, &quot;Installer&quot;,
    &quot;Complete&quot;, &quot;BlueWave&quot;,
    &quot;&quot;)</formula>
        <inlineHelpText>Maps Task Names to an Owner (Partner, Customer, or BlueWave) for use in the Portal</inlineHelpText>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task</label>
        <referenceTo>Partner_Task__c</referenceTo>
        <relationshipLabel>Partner Sub-Tasks</relationshipLabel>
        <relationshipName>SubTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Partner Tasks</relationshipLabel>
        <relationshipName>Partner_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Progress_Bar_Id__c</fullName>
        <formula>SUBSTITUTE(Name, &quot; &quot;, &quot;&quot;) + &quot;ProgressBar&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Bar Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Bar_Name__c</fullName>
        <label>Progress Bar Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Duration__c</fullName>
        <formula>Completion_Date__c -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the relationship to the Sales Team object</description>
        <label>Sales Representative</label>
        <referenceTo>BSST__c</referenceTo>
        <relationshipLabel>Partner Tasks</relationshipLabel>
        <relationshipName>Partner_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SubTasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Task_Type__c</fullName>
        <label>Sub Task Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Label__c</fullName>
        <description>Changing Task Names is difficult since they&apos;re referenced in code</description>
        <formula>CASE(Name, 
&quot;Provide all System Information&quot;, &quot;Input System Information&quot;,
&quot;Provide PayStub Documentation&quot;, &quot;Provide Paystub Documentation&quot;,
&quot;Obtain Contract Signature&quot;, &quot;Sign Loan Contract&quot;,
&quot;Under BlueWave Review&quot;, &quot;Review Income Documentation&quot;,
&quot;Provide Sales Agreement&quot;, &quot;Upload Sales Agreement&quot;,
&quot;Building Permit&quot;, &quot;Submit Approved Building Permit&quot;,
&quot;Material Invoice&quot;, &quot;Upload Material Invoice&quot;, 
&quot;Mechanical Installation&quot;, &quot;Upload Mechanical Installation Documentation&quot;,
&quot;Interconnection&quot;, &quot;Input Interconnection Documentation&quot;,
Name) &amp;
IF(ISPICKVAL(Loan__r.Lead__r.Status, &quot;Not Interested&quot;), &quot; (Not Interested)&quot;,&quot;&quot;)</formula>
        <inlineHelpText>Change label of task name for use in the portal</inlineHelpText>
        <label>Task Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Sequence__c</fullName>
        <label>Task Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>Used in the LoanHandler to assign the SubTasks to the Parent Tasks. Needs to exist because the parents must be inserted before the subTasks; however this can&apos;t be done without breaking the for loop. Therefore, we need to set up a map, which uses this as the key value.</description>
        <label>Task Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Partner Task</label>
    <nameField>
        <label>Partner Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Tasks</pluralLabel>
    <recordTypes>
        <fullName>BlueWave_Solar_Loan_Partner</fullName>
        <active>true</active>
        <label>BlueWave Solar Loan Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child_Partner_Task</fullName>
        <active>true</active>
        <label>Child Partner Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Partner_Task</fullName>
        <active>true</active>
        <label>Parent Partner Task</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Interconnected_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL( Status__c ,&apos;Pending&apos;)|| 
ISPICKVAL( Status__c ,&apos;Incomplete&apos;)|| 
ISPICKVAL( Status__c, &apos;&apos;)) &amp;&amp; 
ISPICKVAL(PRIORVALUE(Status__c),&quot;Complete&quot;) &amp;&amp; 
Task_Type__c = &apos;Interconnection&apos; &amp;&amp; 
Opportunity__r.Interconnected__c = true</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>This task status cannot be changed after the system is interconnected.  Please uncheck the &apos;Interconnected&apos; checkbox on the Residential Equipment to set this status to &apos;Pending&apos;.</errorMessage>
    </validationRules>
</CustomObject>